@@ -24,6 +24,7 @@
 
 /** @file include/ratio
  *  This is a Standard C++ Library header.
+ *  @ingroup ratio
  */
 
 #ifndef _GLIBCXX_RATIO
@@ -49,6 +50,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
    * Compile time representation of finite rational numbers.
    * @{
    */
+
+  /// @cond undocumented
 
   template<intmax_t _Pn>
     struct __static_sign
@@ -243,6 +246,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       static_assert(__rem < __d, "Internal library error");
     };
 
+  /// @endcond
+
   /**
    *  @brief Provides compile-time rational arithmetic.
    *
@@ -280,6 +285,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
   template<intmax_t _Num, intmax_t _Den>
     constexpr intmax_t ratio<_Num, _Den>::den;
 
+  /// @cond undocumented
+
   template<typename _R1, typename _R2>
     struct __ratio_multiply
     {
@@ -306,9 +313,13 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
   template<typename _R1, typename _R2>
     constexpr intmax_t __ratio_multiply<_R1, _R2>::den;
 
+  /// @endcond
+
   /// ratio_multiply
   template<typename _R1, typename _R2>
     using ratio_multiply = typename __ratio_multiply<_R1, _R2>::type;
+
+  /// @cond undocumented
 
   template<typename _R1, typename _R2>
     struct __ratio_divide
@@ -329,6 +340,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
   template<typename _R1, typename _R2>
     constexpr intmax_t __ratio_divide<_R1, _R2>::den;
 
+  /// @endcond
+
   /// ratio_divide
   template<typename _R1, typename _R2>
     using ratio_divide = typename __ratio_divide<_R1, _R2>::type;
@@ -344,6 +357,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     struct ratio_not_equal
     : integral_constant<bool, !ratio_equal<_R1, _R2>::value>
     { };
+
+  /// @cond undocumented
 
   // Both numbers are positive.
   template<typename _R1, typename _R2,
@@ -374,6 +389,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     : __ratio_less_impl_1<ratio<-_R2::num, _R2::den>,
            ratio<-_R1::num, _R1::den> >::type
     { };
+
+  /// @endcond
 
   /// ratio_less
   template<typename _R1, typename _R2>
@@ -415,6 +432,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     inline constexpr bool ratio_greater_equal_v
     = ratio_greater_equal<_R1, _R2>::value;
 #endif // C++17
+
+  /// @cond undocumented
 
   template<typename _R1, typename _R2,
       bool = (_R1::num >= 0),
@@ -499,9 +518,13 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
   template<typename _R1, typename _R2>
     constexpr intmax_t __ratio_add<_R1, _R2>::den;
 
+  /// @endcond
+
   /// ratio_add
   template<typename _R1, typename _R2>
     using ratio_add = typename __ratio_add<_R1, _R2>::type;
+
+  /// @cond undocumented
 
   template<typename _R1, typename _R2>
     struct __ratio_subtract
@@ -519,6 +542,8 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
   template<typename _R1, typename _R2>
     constexpr intmax_t __ratio_subtract<_R1, _R2>::den;
+
+  /// @endcond
 
   /// ratio_subtract
   template<typename _R1, typename _R2>
